# scran_aggregate

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: check-install.yaml  doxygenate.yaml  run-tests.yaml
cmake/: Config.cmake.in
docs/: Doxyfile  aggregate__across__cells_8hpp.html  aggregate__across__cells_8hpp__dep__incl.map  aggregate__across__cells_8hpp__dep__incl.md5  aggregate__across__cells_8hpp__incl.map  aggregate__across__cells_8hpp__incl.md5  aggregate__across__cells_8hpp_source.html  aggregate__across__genes_8hpp.html  aggregate__across__genes_8hpp__dep__incl.map  aggregate__across__genes_8hpp__dep__incl.md5  aggregate__across__genes_8hpp__incl.map  aggregate__across__genes_8hpp__incl.md5  aggregate__across__genes_8hpp_source.html  annotated.html  classes.html  clean__factor_8hpp.html  clean__factor_8hpp__dep__incl.map  clean__factor_8hpp__dep__incl.md5  clean__factor_8hpp__incl.map  clean__factor_8hpp__incl.md5  clean__factor_8hpp_source.html  combine__factors_8hpp.html  combine__factors_8hpp__dep__incl.map  combine__factors_8hpp__dep__incl.md5  combine__factors_8hpp__incl.map  combine__factors_8hpp__incl.md5  combine__factors_8hpp_source.html  compute_8hpp.html  compute_8hpp__dep__incl.map  compute_8hpp__dep__incl.md5  compute_8hpp__incl.map  compute_8hpp__incl.md5  compute_8hpp_source.html  dir_624a3452858582ab9caa87aa5279549f.html  dir_8440af238457f7ca59c47e4d806e17f1.html  dir_bdabb9492db2368b3caf0f4c1df6a160.html  doxygen_crawl.html  files.html  functions.html  functions_vars.html  (+42 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  files_0.js  files_1.js  files_2.js  files_3.js  (+50 more)
include/aggregate_across_cells/: aggregate_across_cells.hpp  combine_factors.hpp  compute.hpp
include/scran/: aggregate_across_cells.hpp  combine_factors.hpp  scran.hpp
include/scran_aggregate/: aggregate_across_cells.hpp  aggregate_across_genes.hpp  clean_factor.hpp  combine_factors.hpp  scran_aggregate.hpp  utils.hpp
tests/: CMakeLists.txt
tests/src/: aggregate_across_cells.cpp  aggregate_across_genes.cpp  clean_factor.cpp  combine_factors.cpp  compute.cpp  utils.h
